[gd_scene format=3 uid="uid://dxrkm5bqw4v2p"]

[ext_resource type="Script" uid="uid://b5041sydvrtnq" path="res://UI/main_menu.gd" id="1_maingd"]

[sub_resource type="FontFile" id="FontFile_uahxu"]
cache/0/variation_coordinates = {}
cache/0/face_index = 0
cache/0/embolden = 0.0
cache/0/transform = Transform2D(1, 0, 0, 1, 0, 0)
cache/0/spacing_top = 0
cache/0/spacing_bottom = 0
cache/0/spacing_space = 0
cache/0/spacing_glyph = 0
cache/0/baseline_offset = 0.0
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/72/0/ascent = 0.0
cache/0/72/0/descent = 0.0
cache/0/72/0/underline_position = 0.0
cache/0/72/0/underline_thickness = 0.0
cache/0/72/0/scale = 1.0

[node name="MainMenu" type="Control" unique_id=1150712118]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_maingd")

[node name="Background" type="ColorRect" parent="." unique_id=347489824]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.059, 0.043, 0.098, 1)

[node name="IntroPanel" type="Control" parent="." unique_id=444961049]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="IntroTitle" type="Label" parent="IntroPanel" unique_id=636102591]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -50.0
offset_right = 150.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = SubResource("FontFile_uahxu")
theme_override_font_sizes/font_size = 72
text = "Patina Industries"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MenuPanel" type="Control" parent="." unique_id=1711375546]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="MenuPanel" unique_id=1581590861]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MenuPanel/CenterContainer" unique_id=12458343]
layout_mode = 2
theme_override_constants/separation = 16

[node name="TitleLabel" type="Label" parent="MenuPanel/CenterContainer/VBoxContainer" unique_id=403367803]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Strange Places"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="MenuPanel/CenterContainer/VBoxContainer" unique_id=13208762]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2

[node name="NewGameButton" type="Button" parent="MenuPanel/CenterContainer/VBoxContainer" unique_id=1062581968]
custom_minimum_size = Vector2(240, 56)
layout_mode = 2
text = "New Game"

[node name="LoadGameButton" type="Button" parent="MenuPanel/CenterContainer/VBoxContainer" unique_id=573347557]
custom_minimum_size = Vector2(240, 56)
layout_mode = 2
text = "Load Game"

[node name="SettingsButton" type="Button" parent="MenuPanel/CenterContainer/VBoxContainer" unique_id=1424217008]
custom_minimum_size = Vector2(240, 56)
layout_mode = 2
text = "Settings"

[connection signal="pressed" from="MenuPanel/CenterContainer/VBoxContainer/NewGameButton" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="MenuPanel/CenterContainer/VBoxContainer/LoadGameButton" to="." method="_on_load_game_pressed"]
[connection signal="pressed" from="MenuPanel/CenterContainer/VBoxContainer/SettingsButton" to="." method="_on_settings_pressed"]
